Fix switching between powerdevil and wakeup polling

BUG: 496296

This fixes a segfault when the wakeup polling thread is deleted when
switching to powerdevil as the wakeup scheduler. I also fixed the wakeup
provider signal not being reconnected during this event.